# manifold

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
include/: mesh.hpp
src/: mesh.cpp
